--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Ang2herores</title>
+  <title>Ng2new</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,8 +10,6 @@
   
 </head>
 <body>
-  <div class="container">
-    <app-root>Loading...</app-root>
-  </div>
+  <app-root>Loading...</app-root>
 </body>
 </html>
